force-app/main/default/objects/cgcloud__Order_Template_Product_Selector_Group__c/cgcloud__Order_Template_Product_Selector_Group__c.object-meta.xml
<CustomObject>
    <description>Holds the relation between Order Template and Product selection.</description>
    <label>Order Template Product Selector Group</label>
    <nameField>
        <displayFormat>PSG -{000}</displayFormat>
        <label>Order Template Product Selection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Template Product Selector Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>