force-app/main/default/objects/cgcloud__Order_Template_Product_Selector_Group__c/fields/cgcloud__Default__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default Flag</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>