force-app/main/default/objects/cgcloud__Order_Template_Product_Selector_Group__c/fields/cgcloud__Level_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Level_1__c</fullName>
    <description>Product Selector Level 1</description>
    <label>Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Basket</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>SubCategory</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>OutOfStock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>