force-app/main/default/objects/cgcloud__Order_Template_Product_Selector_Group__c/fields/cgcloud__Level_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Level_2__c</fullName>
    <description>Product Selector Level 2</description>
    <label>Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>SubCategory</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>