force-app/main/default/objects/cgcloud__Order_Template_Product_Selector_Group__c/fields/cgcloud__Order_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Template_Id__c</fullName>
    <description>Reference to Order Template.</description>
    <label>Order Template Id</label>
    <referenceTo>cgcloud__Order_Template__c</referenceTo>
    <relationshipLabel>Product Selector Groups</relationshipLabel>
    <relationshipName>Product_Selector_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>